# mstools

./: README.md  USAGE_EXAMPLES.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: README.md  contributing.md  examples.md  index.md  requirements.txt
docs/api/: data-classes.md  mounts.md  ms.md  operations.md  utilities.md
docs/cli/: commands.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: export.md  ms-files.md  operations.md  overview.md
src/mstools/: main.py
src/mstools/tools/: __init__.py  mounts.py  msdata.py  operations.py
